--- a/terraform-manifest/Makefile
+++ b/terraform-manifest/Makefile
@@ -1,3 +1,8 @@
+plan-dev:
+	terraform plan -var-file=environments/dev.tfvars
+plan-prod:
+	terraform plan -var-file=environments/prod.tfvars
+
 apply-dev:
 	terraform apply -var-file=environments/dev.tfvars
 apply-prod:
