--- a/terraform-manifest/Makefile
+++ b/terraform-manifest/Makefile
@@ -7,3 +7,8 @@ apply-dev:
 	terraform apply -var-file=environments/dev.tfvars
 apply-prod:
 	terraform apply -var-file=environments/prod.tfvars
+
+destroy-dev:
+	terraform destroy -var-file=environments/dev.tfvars
+destroy-prod:
+	terraform destroy -var-file=environments/prod.tfvars
